# sentouki

./: .gitignore  .prettierrc  Dockerfile  README.md  biome.json  compose.yaml  default.nix  drizzle.config.ts  eslint.config.js  flake.nix  module.nix  package.json  package.nix  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  register.nix  result  svelte.config.js  tsconfig.json  vite.config.ts
cli/: index.ts  populateCache.ts  register.ts
engine/: Cargo.toml
engine/src/: cache.rs  entry.rs  lib.rs  main.rs
mc/: README.md  run.sh  server.properties
nix/: package.nix
scripts/: register.ts  seedDb.ts
src/: app.css  app.d.ts  app.pcss  cli.ts  hooks.server.ts
src/cli/: register.ts
src/lib/: fileSize.ts  logger.ts  utils.ts
src/lib/browse/: index.ts
src/lib/file/: date.ts  filesystem.ts  filetypes.ts  index.test.ts  index.ts  path.ts  size.ts  types.ts
src/lib/fs/: date.test.ts  date.ts  directory.server.ts  directory.ts  file.server.ts  file.ts  filetypes.server.ts  filetypes.svelte.ts  filetypes.ts  index.ts  path.server.ts  path.ts  size.ts
src/lib/server/: auth.ts  files.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  Nav.svelte
src/routes/(protected)/: +layout.server.ts
src/routes/login/: +page.server.ts  +page.svelte  LoginForm.svelte  schema.ts
src/routes/profile/: +page.server.ts  +page.svelte
src/routes/search/: +page.svelte
uoh-file-browser/: .dockerignore  .prettierrc  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
uoh-file-browser/cli/: populateCache.ts
(+169 files in other folders)
