[package]
name = "sentouki-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "time"] }
tokio = { version = "1.38.0", features = ["full"] }
color-eyre = { version = "0.6.3" }
time = "0.3.36"
clap = { version = "4.5.8", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
